--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,11 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id "org.jlleitschuh.gradle.ktlint" version "10.0.0"
+    id 'checkstyle'
 }
 allprojects {
     apply plugin:"org.jlleitschuh.gradle.ktlint"
+    apply plugin: 'checkstyle'
 }
 android {
     compileSdkVersion 30
