--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.kinotech.kinotechappv1">
     <uses-permission android:name="android.permission.INTERNET" />
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,8 +12,10 @@
         android:theme="@style/Theme.KinotechAppV1">
         <activity
             android:name=".MainActivity"
+                android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait"
             android:label="@string/app_name">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
