--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         <activity
                 android:name=".MainActivity"
                 android:screenOrientation="portrait"
-                android:label="@string/app_name">
+                android:label="@string/app_name"
+                android:windowSoftInputMode="adjustResize">
         </activity>
         <activity
                 android:name=".AuthActivity"
