--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,15 +16,19 @@
                 android:screenOrientation="portrait"
                 android:windowSoftInputMode="adjustResize"
                 android:label="@string/app_name">
-        </activity>
-        <activity
-                android:name=".AuthActivity"
-                android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+    <!--        <activity-->
+    <!--                android:name=".AuthActivity"-->
+    <!--                android:screenOrientation="portrait">-->
+    <!--            <intent-filter>-->
+    <!--                <action android:name="android.intent.action.MAIN" />-->
+    <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+    <!--            </intent-filter>-->
+    <!--        </activity>-->
+</application>
 
-</manifest>
+        </manifest>
