splash check, app icon, item list onClick

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
         <activity
                 android:name=".AuthActivity"
                 android:screenOrientation="portrait">
+        </activity>
+        <activity
+                android:name=".SplashActivity"
+                android:theme="@style/Theme.Splash"
+                android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
